--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -12,29 +12,27 @@
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
   </head>
   <body>
-    <body>
-      <main>
+    <main>
+      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
         <div class="container">
-          <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-            <div class="container">
-              <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-                  <div class="d-flex justify-content-center py-4">
-                    <a href="index.html" class="logo d-flex align-items-center w-auto">
-                      <img src="<%= asset_path('logo.png') %>" alt="">
-                      <span class="d-none d-lg-block">BookingApp</span>
-                    </a>
-                  </div>
-                  <!-- End Logo -->
-                  <%= yield %>
-                  <div class="alert alert-secondary">
-                    <%= debug(params) if Rails.env.development? %>
-                  </div>
-                </div>
-              </div>
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+              <div class="d-flex justify-content-center py-4">
+                <%= link_to root_path, class: "logo d-flex align-items-center w-auto", rel: "nofollow" do %>
+                  <%= image_tag("logo.png", alt: "Example Image") %>
+                  <span class="d-lg-block">BookingApp</span>
+                <% end %>
+              </a>
             </div>
-          </section>
+            <!-- End Logo -->
+            <%= yield %>
+            <div class="alert alert-secondary">
+              <%= debug(params) if Rails.env.development? %>
+            </div>
+          </div>
         </div>
-      </main>
-    </body>
-  </html>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
