--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,27 +4,29 @@
 
 // Import variables, mixins, and colors first
 @import 'color';
+@import 'typography';
 
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-:root{
+:root {
   scroll-behavior: smooth;
-
+  font-size: 16px;
 }
 
 body {
-  background-color: var(--background);
-  color: var(--foreground);
+  font-family: $font-family-primary;
+  background-color: $color-blue-background;
+  color: $color-gray-dark;
 }
 
 a {
-  color: #4154f1;
+  color: $color-blue-primary;
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: $color-link-active;
   text-decoration: none;
 }
 
@@ -34,40 +36,104 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: $font-family-secondary;
 }
-
-.logo {
-  line-height: 1;
-}
-
-
-
-.logo img {
-  max-height: 26px;
-  margin-right: 6px;
-}
-
-.logo span {
-  font-size: 26px;
-  font-weight: 700;
-  color: #012970;
-  font-family: "Nunito", sans-serif;
-}
+/*--------------------------------------------------------------
+# End general
+--------------------------------------------------------------*/
 
 #main {
-  margin-top: 60px;
-  padding: 20px 30px;
-  transition: all 0.3s;
+  margin-top: 3.75rem;
+  padding: 1.25rem 1.875rem;
 
   @media (max-width: 1199px) {
-    padding: 20px;
+    padding: 1.25rem;
   }
 }
 
 .card {
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
   border: none;
-  border-radius: 5px;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
+  border-radius: 0.3125rem;
+  box-shadow: 0px 0 1.875rem rgba(1, 41, 112, 0.1);
+}
+
+/*--------------------------------------------------------------
+# Override some default Bootstrap stylings
+--------------------------------------------------------------*/
+/* Dropdown menus */
+.dropdown-menu {
+  border-radius: 4px;
+  padding: 10px 0;
+  animation-name: dropdown-animate;
+  animation-duration: 0.2s;
+  animation-fill-mode: both;
+  border: 0;
+  box-shadow: 0 5px 30px 0 rgba(82, 63, 105, 0.2);
+}
+
+.dropdown-menu .dropdown-header,
+.dropdown-menu .dropdown-footer {
+  text-align: center;
+  font-size: 15px;
+  padding: 10px 25px;
+}
+
+.dropdown-menu .dropdown-footer a {
+  color: #444444;
+  text-decoration: none;
+}
+
+.dropdown-menu .dropdown-footer a:hover {
+  text-decoration: underline;
+}
+
+.dropdown-menu .dropdown-divider {
+  color: #a5c5fe;
+  margin: 0;
+}
+
+.dropdown-menu .dropdown-item {
+  font-size: 14px;
+  padding: 10px 15px;
+  transition: 0.3s;
+}
+
+.dropdown-menu .dropdown-item i {
+  margin-right: 10px;
+  font-size: 18px;
+  line-height: 0;
+}
+
+.dropdown-menu .dropdown-item:hover {
+  background-color: #f6f9ff;
+}
+
+@media (min-width: 768px) {
+  .dropdown-menu-arrow::before {
+    content: "";
+    width: 13px;
+    height: 13px;
+    background: #fff;
+    position: absolute;
+    top: -7px;
+    right: 20px;
+    transform: rotate(45deg);
+    border-top: 1px solid #eaedf1;
+    border-left: 1px solid #eaedf1;
+  }
+}
+
+@keyframes dropdown-animate {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+
+  0% {
+    opacity: 0;
+  }
 }
