--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,24 +1,27 @@
 <div class="card mb-3">
   <div class="card-body">
     <div class="pt-4 pb-2">
-      <h5 class="card-title text-center pb-0 fs-4"><%= t("pages.forgot_password.title") %></h5>
-      <p class="text-center small"><%= t("pages.forgot_password.text") %></p>
+      <h5 class="card-title text-center pb-0 fs-4"><%= t('pages.forgot_password.title') %></h5>
+      <p class="text-center small"><%= t('pages.forgot_password.text') %></p>
     </div>
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "row g-3" }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'row g-3' }) do |f| %>
       <div class="col-12">
-        <%= f.label :email, t("activerecord.attributes.user.email"), class: "form-label", for: "email" %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "email" %>
+        <%= f.label :email, t('activerecord.attributes.user.email'), class: 'form-label', for: 'email' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control', id: 'email' %>
         <% if resource.errors[:email].present? %>
           <div class="error_message"><%= resource.errors.full_messages_for(:email).first %></div>
         <% end %>
       </div>
       <div class="col-12">
-        <%= f.submit t("components.button.reset_password"),  class: "btn btn-primary w-100" %>
+        <%= f.submit t('components.button.reset_password'),  class: 'btn btn-primary w-100' %>
       </div>
     <% end %>
     <div class="col-12">
       <hr>
-      <p class="mb-2"><%= t('shared.account_question')%> <%= render "devise/shared/links" %></p>
+      <p class="mb-2">
+        <%= t('shared.account_question')%>
+        <%= render "devise/shared/links" %>
+      </p>
     </div>
   </div>
 </div>
