--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,34 @@
 <div class="card mb-3">
   <div class="card-body">
     <div class="pt-4 pb-2">
-      <h5 class="card-title text-center pb-0 fs-4"><%= t("pages.registrations.title") %></h5>
-      <p class="text-center small"><%= t("pages.registrations.text") %></p>
+      <h5 class="card-title text-center pb-0 fs-4"><%= t('pages.registrations.title') %></h5>
+      <p class="text-center small"><%= t('pages.registrations.text') %></p>
     </div>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "row g-3" }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'row g-3' }) do |f| %>
       <div class="col-12">
         <%= f.label :name, t('activerecord.attributes.user.name'), class: 'form-label', for: 'name' %>
-        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: 'form-control', id: 'name' %>
+        <%= f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control', id: 'name' %>
         <% if resource.errors[:name].present? %>
           <div class="error_message"><%= resource.errors.full_messages_for(:name).first %></div>
         <% end %>
       </div>
       <div class="col-12">
         <%= f.label :email, t('activerecord.attributes.user.email'), class: 'form-label', for: 'email' %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control', id: 'email' %>
         <% if resource.errors[:email].present? %>
           <div class="error_message"><%= resource.errors.full_messages_for(:email).first %></div>
         <% end %>
       </div>
       <div class="col-12">
         <%= f.label :password, t('activerecord.attributes.user.password'), class: 'form-label', for: 'password' %>
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password' %>
+        <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control', id: 'password' %>
         <% if resource.errors[:password].present? %>
           <div class="error_message"><%= resource.errors.full_messages_for(:password).first %></div>
         <% end %>
       </div>
       <div class="col-12">
         <%= f.label :password_confirmation, t('activerecord.attributes.user.password_confirmation'), class: 'form-label', for: 'password_confirmation' %>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation' %>
+        <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control', id: 'password_confirmation' %>
         <% if resource.errors[:password_confirmation].present? %>
           <div class="error_message"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
         <% end %>
@@ -36,7 +36,10 @@
       <div class="col-12">
         <div class="form-check">
           <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required data-message="<%= t('activerecord.errors.messages.must_agree') %>">
-          <label class="form-check-label" for="acceptTerms"><%= t('pages.registrations.terms.accept') %> <a href="#"><%= t('pages.registrations.terms.conditions') %></a></label>
+          <label class="form-check-label" for="acceptTerms">
+            <%= t('pages.registrations.terms.accept') %>
+            <a href="#"><%= t('pages.registrations.terms.conditions') %></a>
+          </label>
         </div>
       </div>
       <div class="col-12">
@@ -45,7 +48,10 @@
     <% end %>
     <div class="col-12">
       <hr>
-      <p class="mb-2"><%= t('shared.account_question')%> <%= render "devise/shared/links" %></p>
+      <p class="mb-2">
+        <%= t('shared.account_question')%>
+        <%= render "devise/shared/links" %>
+      </p>
     </div>
   </div>
 </div>
