--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -13,26 +13,30 @@
   </head>
   <body>
     <main>
-      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-              <div class="d-flex justify-content-center py-4">
-                <%= link_to root_path, class: "logo d-flex align-items-center w-auto", rel: "nofollow" do %>
-                  <%= image_tag("logo.png", alt: "Example Image") %>
-                  <span class="d-lg-block">BookingApp</span>
-                <% end %>
-              </a>
-            </div>
-            <!-- End Logo -->
-            <%= yield %>
-            <div class="alert alert-secondary">
-              <%= debug(params) if Rails.env.development? %>
+      <div class="container">
+        <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+          <div class="container">
+            <div class="rowjustify-content-center">
+              <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+                <div class="d-flex justify-content-center py-4">
+                  <%= link_to root_path, class: 'logo d-flex align-items-center w-auto', rel: 'nofollow' do %>
+                    <%= image_tag('logo.png', alt: 'Example Image') %>
+                    <span class=" d-none d-lg-block">BookingApp</span>
+                  <% end %>
+                </div>
+                <!-- End Logo -->
+                <%= yield %>
+                <div class="credits">
+                  <!-- All the links in the footer should remain intact. -->
+                  <!-- You can delete the links only if you purchased the pro version. -->
+                  <!-- Link github source code. -->
+                  Designed by <a href="https://github.com/dinhthi12">dinhthi12</a>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        </section>
       </div>
-    </section>
-  </main>
-</body>
+    </main><!-- End #main -->
+  </body>
 </html>
